<resources>
    <string name="text_accounts">All Accounts</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_username">Enter valid username</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email already exists</string>
    <string name="error_username_exists">Username already exists</string>
    <string name="error_username_not_exists">Username does not exist</string>
    <string name="error_password_match">Passwords don\'t match</string>
    <string name="error_valid_username_password">Wrong username or password</string>
    <string name="error_invalid_username">This username is too short</string>
    <string name="action_settings">Settings</string>
    <string name="advice">Advice</string>
    <string name="password">Password</string>
    <string name="text_hello">Hello,</string>
    <string name="new_username">New username</string>
    <string name="modify_username">Change username</string>
    <string name="modify_username_text">Change your username</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="modify_password">Change password</string>
    <string name="modify_password_text">Change your password</string>
    <string name="modify">Change your informations</string>
    <string name="new_poll">New Poll</string>
    <string name="which_one">Which kind of poll would you want to create?</string>
    <string name="deco">Log out</string>
    <string name="menu_principal">Main Menu</string>
    <string name="menu">Menu</string>
    <string name="app_name">EasyPoll</string>
    <string name="welcome_message">Welcome to EasyPoll</string>
    <string name="addFriend_activity_title">Add a friend</string>
    <string name="add">Add</string>
    <string name="search_hint">Find your friends</string>
    <string name="username">Username</string>
    <string name="friend_list_activity">Friends</string>
    <string name="login_button">Login</string>
    <string name="title_activity_menu">Main Menu</string>
    <string name="register_button">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="notification">Notifications</string>
    <string name="quizz">Quizz</string>
    <string name="survey">Survey</string>
    <string name="newpoll">New Poll</string>
    <string name="choice">Choice</string>
    <string name="profile">Profile</string>
    <string name="myprofile">My Profile</string>
    <string name="friends">Friends</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_empty_lname">You need to enter your last name</string>
    <string name="error_empty_fname">You need to enter your first name</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="email">Email :</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="last_name">Last Name :</string>
    <string name="first_name">First Name :</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="create_quizz">Create a quizz</string>
    <string name="create_survey">Create a survey</string>
    <string name="create_advice">Need an advice?</string>
    <string name="other_options">Other options</string>
    <string name="title_activity_survey">Survey</string>
    <string name="title_activity_login">Login</string>
    //Photo
    <string name="TakeNewPhoto">Prendre une photo</string>
    <string name="ChoosePhoto">Choisir une photo</string>
    <string name="cannotopencamera">Cannot use the camera without permission</string>


    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
