<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_account"
        android:icon="@mipmap/ic_person_black_24dp"
        android:title="@string/myprofile" />

    <item
        android:id="@+id/new_quizz"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/create_quizz" />
    <item
        android:id="@+id/new_survey"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/create_survey" />
    <item
        android:id="@+id/new_help"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/create_advice" />

    <item android:id="@+id/nav_modify_password"
        android:icon="@mipmap/ic_settings_black_24dp"
        android:title="@string/modify_password" />

    <item android:id="@+id/nav_modify_username"
        android:icon="@mipmap/ic_settings_black_24dp"
        android:title="@string/modify_username" />

    <item android:id="@+id/nav_logout"
        android:title="@string/deco"
        android:icon="@mipmap/exit" />

</menu>